# taskchampion

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  TODO.txt  config-file.html  data-model.html  debugging.html  encryption.html  environment.html  filters.html  http.html  index.html  installation.html  internals.html  introduction.html  modifications.html  object-store.html  plans.html  print.html  reports.html  running-sync-server.html  searchindex.js  searchindex.json  snapshots.html  storage.html  sync-model.html  sync-protocol.html  sync.html  tags.html  task-sync.html  taskdb.html  tasks.html  time.html  undo.html  usage.html  using-task-command.html  (+1 more)
.cargo/: config
.github/: dependabot.yml
.github/workflows/: add-to-project.yml  checks.yml  publish-docs.yml  rust-tests.yml  security.yml  wasm-tests.yml
cli/: Cargo.toml
cli/src/: errors.rs  usage.rs
cli/src/argparse/: filter.rs
cli/src/invocation/: filter.rs  mod.rs  modify.rs  report.rs  util.rs
cli/src/invocation/cmd/: config.rs
cli/src/settings/: report.rs  settings.rs  util.rs
docs/: book.toml
docs/src/: SUMMARY.md  http.md  introduction.md  iterative-tasks.md  storage.md  sync-model.md  sync-protocol.md  sync.md  taskdb.md  tasks.md  usage.md
docs/src/hooks/: index.md  spec.md
integration-tests/: Cargo.toml
integration-tests/tests/: cross-sync.rs  snapshots.rs
lib/: Cargo.toml  taskchampion.h
lib/src/: lib.rs  replica.rs  server.rs
py-lib/: .gitignore  Cargo.toml  README.md  mypy.ini  notes.md  pyproject.toml  taskchampion.pyi
py-lib/src/: annotation.rs  dependency_map.rs  lib.rs  replica.rs  status.rs  storage.rs  tag.rs  task.rs  working_set.rs
py-lib/tests/: test_annotation.py  test_replica.py  test_tag.py  test_task.py  test_working_set.py
replica-server-tests/: Cargo.toml
replica-server-tests/tests/: cross-sync.rs
src/: crate-doc.md  depmap.rs  errors.rs  lib.rs  main.rs  replica.rs  workingset.rs
src/hooks/: mod.rs
src/hooks/hook/: hook_kinds.rs  mod.rs  read.rs
src/hooks/hook/execute/: error.rs  imply.rs  mod.rs
src/server/: config.rs  encryption.rs  http.rs  mod.rs  op.rs  test.rs  types.rs
src/server/cloud/: aws.rs  gcp.rs  iter.rs  mod.rs  server.rs  service.rs  test.rs
src/server/gitsync/: mod.rs
src/server/local/: mod.rs
src/server/sync/: mod.rs
src/storage/: actor.rs  config.rs  indexeddb.rs  inmemory.rs  mod.rs  sqlite.rs  test.rs
src/storage/async_storage/: adapter.rs  mod.rs
src/storage/indexeddb/: mod.rs  schema.rs  storage.rs
src/storage/send_wrapper/: actor.rs  mod.rs  test.rs  traits.rs  wrapper.rs
src/storage/sqlite/: actor.rs  inner.rs  mod.rs  schema.rs
src/task/: annotation.rs  data.rs  iter.rs  mod.rs  status.rs  tag.rs  task.rs  time.rs
src/taskdb/: apply.rs  mod.rs  snapshot.rs  sync.rs  undo.rs  working_set.rs
sync-server/: Cargo.toml
sync-server/src/: lib.rs  server.rs
sync-server/src/api/: add_snapshot.rs  add_version.rs  mod.rs
sync-server/src/storage/: inmemory.rs  mod.rs  sqlite.rs
taskchampion/: Cargo.toml  print.html  searchindex.js  searchindex.json
taskchampion-hooks/: Cargo.toml
taskchampion-hooks/hook_structure/on-add_v3/: hook_new.metadata.json  hook_new.sh
taskchampion-hooks/hook_structure/on-modify_v3/: hook_new.sh
taskchampion-hooks/src/: lib.rs  main.rs
taskchampion-hooks/src/hook/: hook_kinds.rs  read.rs
taskchampion-hooks/src/hook/execute/: error.rs  imply.rs  mod.rs
taskchampion/src/: crate-doc.md  depmap.rs  errors.rs  lib.rs  operation.rs  replica.rs
taskchampion/src/server/: config.rs  local.rs  mod.rs  op.rs  test.rs  types.rs
taskchampion/src/server/cloud/: aws.rs  gcp.rs  mod.rs  server.rs  test.rs
taskchampion/src/server/ete/: mod.rs
taskchampion/src/server/remote/: crypto.rs  mod.rs
taskchampion/src/server/sync/: mod.rs
taskchampion/src/storage/: config.rs  inmemory.rs  kv.rs  mod.rs  operation.rs  sqlite.rs  test.rs
taskchampion/src/storage/sqlite/: schema.rs
taskchampion/src/task/: basictask.rs  data.rs  mod.rs  tag.rs  task.rs
taskchampion/src/taskdb/: apply.rs  mod.rs  ops.rs  snapshot.rs  sync.rs  undo.rs  working_set.rs
taskchampion/tests/: cross-sync.rs  syncing-proptest.rs  update-and-delete-sync.rs
tests/: aws-tls.rs  cross-sync.rs  gcp-tls.rs  iterative-sync.rs  sync-server-tls.rs  syncing-proptest.rs  tls_utils.rs  update-and-delete-sync.rs
tests/hook_structure/on-add_v3/: hook_new.sh
tests/hook_structure/on-modify_v3/: hook_new.sh
xtask/: Cargo.toml
xtask/src/: main.rs  migrate.rs  msrv.rs
xtask/src/test_wasm/: mod.rs  models.rs  setup.rs
xtask/tests/: migrate.rs
