[package]
name = "taskchampion"
version = "3.0.0-pre"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
description = "Personal task-tracking"
homepage = "https://gothenburgbitfactory.github.io/taskchampion/"
documentation = "https://docs.rs/crate/taskchampion"
repository = "https://github.com/GothenburgBitFactory/taskchampion"
categories = ["command-line-utilities"]
keywords = ["cli", "todo", "tasks", "taskwarrior", "task-tracking"]
readme = "src/crate-doc.md"
license = "MIT"
edition = "2021"
rust-version = "1.82.0"

[workspace]
members = [ "xtask" ]
resolver = "2"

[features]
default = ["sync", "bundled", "storage", "tls-webpki-roots"]

# Support for all sync solutions
sync = ["server-sync", "server-gcp", "server-aws", "server-local"]
# Support for sync to a server
server-sync = ["encryption", "dep:ureq", "dep:url"]
# Support for sync to GCP
server-gcp = ["cloud", "encryption", "dep:google-cloud-storage", "dep:reqwest-middleware"]
# Support for sync to AWS
server-aws = ["cloud", "encryption", "dep:aws-sdk-s3", "dep:aws-config", "dep:aws-credential-types", "dep:aws-smithy-runtime"]
# Suppport for sync to another SQLite database on the same machine
server-local = ["storage-sqlite"]
# Support for all task storage backends
storage = ["storage-sqlite"]
# Support for SQLite task storage
storage-sqlite = ["dep:rusqlite"]
# (private) Support for sync protocol encryption
encryption = ["dep:ring"]
# (private) Generic support for cloud sync
cloud = []
# static bundling of dependencies
bundled = ["rusqlite/bundled"]
# use CA roots built into the library for all HTTPS access
tls-webpki-roots = ["dep:hyper-rustls", "hyper-rustls/webpki-roots", "dep:reqwest", "reqwest/rustls-tls-webpki-roots"]
# use native CA roots (from the filesystem), instead of bundled for all HTTPS access
tls-native-roots = ["ureq/native-certs", "dep:hyper-rustls", "hyper-rustls/rustls-native-certs", "dep:reqwest", "reqwest/rustls-tls-native-roots"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1.0"
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"], optional = true }
aws-smithy-runtime = { version = "*", optional = true } # AWS SDK selects a version
byteorder = "1.5"
chrono = { version = "^0.4.38", features = ["serde"] }
flate2 = "1"
google-cloud-storage = { version = "0.24.0", default-features = false, features = ["rustls-tls", "auth"], optional = true }
hyper-rustls = { version = "0.24.2", optional = true }
log = "^0.4.17"
reqwest = { version = "*", optional = true } # GCP SDK selects a version
reqwest-middleware = { version = "*", optional = true } # GCP SDK selects a version
ring = { version = "0.17", optional = true }
rusqlite = { version = "0.37", optional = true}
serde_json = "^1.0"
serde = { version = "^1.0.147", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1", features = ["macros", "sync"] }
thiserror = "2.0"
ureq = { version = "^2.12.1", features = ["tls"], optional = true }
uuid = { version = "^1.16.0", features = ["serde", "v4"] }
url = { version = "2", optional = true }
async-trait = "0.1.89"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "*", features = ["js"] }

[dev-dependencies]
proptest = "^1.9.0"
tempfile = "3"
rstest = "0.26"
pretty_assertions = "1"
libc = "*"
tokio = { version = "*", features = ["rt"] }
