[package]
name = "integration-tests"
version = "0.4.1"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"
publish = false
build = "build.rs"

[dependencies]
taskchampion = { path = "../taskchampion" }
taskchampion-sync-server = { path = "../sync-server" }

[dev-dependencies]
anyhow = "1.0"
tempfile = "3"
pretty_assertions = "1"
log = "^0.4.14"
env_logger = "^0.8.3"
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "^0.5.3", features = ["headers"] }

[build-dependencies]
cc = "1.0.73"
taskchampion-lib = { path = "../lib" }
