[package]
name = "taskchampion-lib"
version = "0.6.0"
edition = "2021"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
description = "Personal task-tracking"
homepage = "https://gothenburgbitfactory.github.io/taskchampion/"
documentation = "https://docs.rs/crate/taskchampion"
repository = "https://github.com/GothenburgBitFactory/taskchampion"
license = "MIT"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
libc.workspace = true
anyhow.workspace = true
ffizz-header.workspace = true

taskchampion = { path = "../taskchampion", version = "0.6.0" }

[dev-dependencies]
pretty_assertions.workspace = true
