[package]
name = "py-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"

taskchampion = { path = "../taskchampion", version = "0.5.0" }
