[package]
name = "taskchampion_python"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "taskchampion"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "taskchampion"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"

taskchampion = { path = "../taskchampion", version = "0.5.0" }
