[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "taskchampion"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "taskchampion"
version = "0.1.0"
authors = ["illyalaifu <illyalaifu@gmail.com>"]
description = ""

[tool.poetry.dependencies]
python = ">=3.8"
maturin = {extras = ["patchelf"], version = "^1.5.1"}

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
mypy = "^1.10.0"
