[package]
name = "replica-server-tests"
version = "0.4.1"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"
publish = false

[dependencies.taskchampion-sync-server]
path = "../sync-server"

[dependencies.taskchampion]
path = "../taskchampion"

[dev-dependencies]
eyre = "0.6"
actix-web = "^3.3.2"
actix-rt = "^1.1.1"
tempfile = "3"
pretty_assertions = "1"
