[package]
name = "taskchampion-sync-server"
version = "0.4.1"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "^0.8.2", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "^0.3.8"
serde = "^1.0.125"
serde_json = "^1.0"
bpaf = "^0.4.3"
log = "^0.4.14"
env_logger = "^0.8.3"
rusqlite = { version = "0.25", features = ["bundled"] }
chrono = { version = "^0.4.10", features = ["serde"] }
axum = { version = "^0.5.3", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
