[package]
name = "tw-hooks"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85.0"  # MSRV

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
stderrlog = "0.6.0"
taskchampion = { path = "../." }
thiserror = "2.0.12"
