[package]
name = "taskchampion"
version = "0.8.1-pre"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
description = "Personal task-tracking"
homepage = "https://gothenburgbitfactory.github.io/taskchampion/"
documentation = "https://docs.rs/crate/taskchampion"
repository = "https://github.com/GothenburgBitFactory/taskchampion"
readme = "src/crate-doc.md"
license = "MIT"
edition = "2021"
rust-version = "1.73.0"

[features]
default = ["sync", "bundled"]

# Support for all sync solutions
sync = ["server-sync", "server-gcp"]
# Support for sync to a server
server-sync = ["encryption", "dep:ureq", "dep:url"]
# Support for sync to GCP
server-gcp = ["cloud", "encryption", "dep:google-cloud-storage", "dep:tokio"]
# (private) Support for sync protocol encryption
encryption = ["dep:ring"]
# (private) Generic support for cloud sync
cloud = []
# static bundling of dependencies
bundled = ["rusqlite/bundled"]
# use native CA roots, instead of bundled
tls-native-roots = ["ureq/native-certs"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ureq.workspace = true
log.workspace = true
rusqlite.workspace = true
strum.workspace = true
strum_macros.workspace = true
flate2.workspace = true
byteorder.workspace = true
ring.workspace = true
google-cloud-storage.workspace = true
tokio.workspace = true
url.workspace = true

google-cloud-storage.optional = true
tokio.optional = true
ureq.optional = true
url.optional = true
ring.optional = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
