[package]
name = "taskchampion"
version = "1.0.0-pre"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
description = "Personal task-tracking"
homepage = "https://gothenburgbitfactory.github.io/taskchampion/"
documentation = "https://docs.rs/crate/taskchampion"
repository = "https://github.com/GothenburgBitFactory/taskchampion"
readme = "src/crate-doc.md"
license = "MIT"
edition = "2021"
rust-version = "1.78.0"

[features]
default = ["sync", "bundled"]

# Support for all sync solutions
sync = ["server-sync", "server-gcp", "server-aws"]
# Support for sync to a server
server-sync = ["encryption", "dep:ureq", "dep:url"]
# Support for sync to GCP
server-gcp = ["cloud", "encryption", "dep:google-cloud-storage", "dep:tokio"]
# Support for sync to AWS
server-aws = ["cloud", "encryption", "dep:aws-sdk-s3", "dep:aws-config", "dep:aws-credential-types", "dep:tokio"]
# (private) Support for sync protocol encryption
encryption = ["dep:ring"]
# (private) Generic support for cloud sync
cloud = []
# static bundling of dependencies
bundled = ["rusqlite/bundled"]
# use native CA roots, instead of bundled
tls-native-roots = ["ureq/native-certs"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
byteorder.workspace = true
chrono.workspace = true
flate2.workspace = true
google-cloud-storage.workspace = true
log.workspace = true
ring.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
serde.workspace = true
strum_macros.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
ureq.workspace = true
url.workspace = true
uuid.workspace = true

aws-config.optional = true
aws-credential-types.optional = true
aws-sdk-s3.optional = true
google-cloud-storage.optional = true
ring.optional = true
tokio.optional = true
ureq.optional = true
url.optional = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
