[package]
name = "xtask"
version = "0.7.0" 
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
regex = "^1.11.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
webdriver-downloader = "0.16.0"
zip = "5.1.1"
